// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Context.Article > load('basic page with string content') 1`] = `
{
  "articles": undefined,
  "class": [],
  "content": "This is the article content.",
  "header": {
    "author": undefined,
    "changed": undefined,
    "published": undefined,
    "readingTime": 1,
    "title": "Test Article",
    "wordCount": 5,
  },
  "id": "test",
  "link": "/test",
  "meta": {},
  "mode": "full",
  "sections": undefined,
  "type": undefined,
}
`;

exports[`binotype.Context.Article > load('page with both string content and mod…') 1`] = `
{
  "articles": undefined,
  "class": [],
  "content": "This content should be shown.",
  "header": {
    "author": undefined,
    "changed": undefined,
    "published": undefined,
    "readingTime": 1,
    "title": "Body Article",
    "wordCount": 5,
  },
  "id": "body",
  "link": "/body",
  "meta": {},
  "mode": "body",
  "sections": undefined,
  "type": undefined,
}
`;

exports[`binotype.Context.Article > load('page with count limit for sections') 1`] = `
{
  "articles": undefined,
  "class": [],
  "content": undefined,
  "header": {
    "author": undefined,
    "changed": undefined,
    "published": undefined,
    "readingTime": 1,
    "title": "Limited Sections",
    "wordCount": 2,
  },
  "id": "limited",
  "link": "/limited",
  "meta": {},
  "mode": "full",
  "sections": [
    {
      "class": [],
      "content": "Content 1",
      "id": "section1",
      "link": "/limited#section1",
      "meta": {},
      "mode": "full",
      "sections": undefined,
      "title": "Section 1",
      "type": undefined,
    },
    {
      "class": [],
      "content": "Content 2",
      "id": "section2",
      "link": "/limited#section2",
      "meta": {},
      "mode": "full",
      "sections": undefined,
      "title": "Section 2",
      "type": undefined,
    },
  ],
  "type": undefined,
}
`;

exports[`binotype.Context.Article > load('page with mode header (no content sho…') 1`] = `
{
  "articles": undefined,
  "class": [],
  "content": undefined,
  "header": {
    "author": undefined,
    "changed": undefined,
    "published": undefined,
    "readingTime": 1,
    "title": "Header Only",
    "wordCount": 6,
  },
  "id": "header",
  "link": "/header",
  "meta": {},
  "mode": "header",
  "sections": undefined,
  "type": undefined,
}
`;

exports[`binotype.Context.Article > load('page with object content (sections)') 1`] = `
{
  "articles": undefined,
  "class": [],
  "content": undefined,
  "header": {
    "author": undefined,
    "changed": undefined,
    "published": undefined,
    "readingTime": 1,
    "title": "Page with Sections",
    "wordCount": 2,
  },
  "id": "sections",
  "link": "/sections",
  "meta": {},
  "mode": "full",
  "sections": [
    {
      "class": [],
      "content": "Intro content",
      "id": "intro",
      "link": "/sections#intro",
      "meta": {},
      "mode": "full",
      "sections": undefined,
      "title": "Introduction",
      "type": undefined,
    },
    {
      "class": [],
      "content": "Main content",
      "id": "main",
      "link": "/sections#main",
      "meta": {},
      "mode": "full",
      "sections": undefined,
      "title": "Main Section",
      "type": undefined,
    },
  ],
  "type": undefined,
}
`;

exports[`binotype.Context.Article > load('page with sub-pages (articles)') 1`] = `
{
  "articles": [
    {
      "articles": undefined,
      "class": [],
      "content": undefined,
      "header": {
        "author": undefined,
        "changed": undefined,
        "published": "2024-01-02T10:00:00Z",
        "readingTime": 1,
        "title": "Second Post",
        "wordCount": 3,
      },
      "id": "blog",
      "link": "/blog/post2",
      "meta": {},
      "mode": "summary",
      "sections": undefined,
      "type": undefined,
    },
    {
      "articles": undefined,
      "class": [],
      "content": undefined,
      "header": {
        "author": undefined,
        "changed": undefined,
        "published": "2024-01-01T10:00:00Z",
        "readingTime": 1,
        "title": "First Post",
        "wordCount": 3,
      },
      "id": "blog",
      "link": "/blog/post1",
      "meta": {},
      "mode": "summary",
      "sections": undefined,
      "type": undefined,
    },
  ],
  "class": [],
  "content": undefined,
  "header": {
    "author": undefined,
    "changed": undefined,
    "published": undefined,
    "readingTime": undefined,
    "title": "Blog",
    "wordCount": undefined,
  },
  "id": "blog",
  "link": "/blog",
  "meta": {},
  "mode": "list",
  "sections": undefined,
  "type": undefined,
}
`;
